@@ -2,35 +2,78 @@ function bool Standalone.onWriteToSpriteTable(s16 px, s16 py, u16 renderQueue)
 {
 	if ((global.game_mode & 0x7f) == 0x4c || (global.game_mode & 0x7f) == 0x0c)
 	{
+		// Zone Act X label
 		if (objA0.update_address == 0x00d42c)
 		{
-			if (u8[A0 + 0x70] != 0x00 && u8[A0 + 0x08] != 0x01)
-			{
-				u64 key
-				
-				// "Sonic 3 Complete Font" by Retro, check https://gamebanana.com/mods/334378
-				// "Sonic 3 Complete Sound Test" by mrgrassman14, check https://gamebanana.com/mods/361615
-				if (Mods.isModActive("Sonic 3 Complete Font") || Mods.isModActive("Sonic 3 Complete Sound Test"))
-					key = "dataSel_saveslot_actComplete"
-				else
-					key = "dataSel_saveslot_act"
+			u32 currentSelectedSlot = 0xffffb128 + (0x4a * (dataselect.slot_selected - 0x01))
+			u32 selectedSlotData = 0xffffe6ac + (0x0a * (dataselect.slot_selected - 0x01))
 			
-				// Check if the sprite exists
-				if (Renderer.hasCustomSprite(key))
-					Renderer.drawCustomSprite(key, px - 0x08, py - (MenuStyle.dataSelect == 0x00 ? 48 : 40), 0x00, SPRITE_FLAG_PRIO, 0xffff)
-				
+			bool nonCompletedSlot = u8[selectedSlotData + 0x00] == 0x00 && u8[A0 + 0x75] != 0x00 && u8[A0 + 0x08] != 0x01
+			bool completedSlot = (u8[selectedSlotData + 0x00] != 0x00 && u8[selectedSlotData + 0x00] != 0x80) && u8[A0 + 0x75] != 0x00 && u8[A0 + 0x08] != 0x01
+			if (completedSlot || nonCompletedSlot)
+			{
 				// "Sonic 3 Complete Font" by Retro, check https://gamebanana.com/mods/334378
 				// "Sonic 3 Complete Sound Test" by mrgrassman14, check https://gamebanana.com/mods/361615
-				if (Mods.isModActive("Sonic 3 Complete Font") || Mods.isModActive("Sonic 3 Complete Sound Test"))
-					key = stringformat("dataSel_saveslot_numberComplete_%d", u8[A0 + 0x70])
+				// "Mania Style Data Select" by Agnoristos, check https://gamebanana.com/mods/000000
+				
+				// Define the number of the act 
+				u64 key_act
+				if (Mods.isModActive("Mania Style Data Select"))
+					key_act = stringformat("dataSel_saveLabel_Mania_ACT_%d", u8[A0 + 0x75])
+				else if (Mods.isModActive("Sonic 3 Complete Font") || Mods.isModActive("Sonic 3 Complete Sound Test"))
+					key_act = stringformat("dataSel_saveLabel_Complete_ACT_%d", u8[A0 + 0x75])
 				else
-					key = stringformat("dataSel_saveslot_number_%d", u8[A0 + 0x70])
+					key_act = stringformat("dataSel_saveLabel_ACT_%d", u8[A0 + 0x75])
+				
+				// Define the boss battle sprite
+				u64 key_boss
+				if (Mods.isModActive("Mania Style Data Select"))
+					key_boss = "dataSel_saveLabel_Mania_ACT_BOSS"
+				else if (Mods.isModActive("Sonic 3 Complete Font") || Mods.isModActive("Sonic 3 Complete Sound Test"))
+					key_boss = "dataSel_saveLabel_Complete_ACT_BOSS"
+				else
+					key_boss = "dataSel_saveLabel_ACT_BOSS"
+				
+				// Define whether to use an Boss label or Act label for a slot
+				bool bossBattle = (u8[A0 + 0x75] == 0x0a) ? true : false 
+				u64 key_label = bossBattle ? key_boss : key_act
 				
 				// Check if the sprite exists
-				if (Renderer.hasCustomSprite(key))
-					Renderer.drawCustomSprite(key, px + 0x10, py - (MenuStyle.dataSelect == 0x00 ? 48 : 40), 0x00, SPRITE_FLAG_PRIO, 0xffff)
+				if (Renderer.hasCustomSprite(key_label))
+				{
+					if (Mods.isModActive("Mania Style Data Select"))
+						Renderer.drawCustomSprite(key_label, px, py - (MenuStyle.dataSelect == 0x00 ? 64 : 56), 0x00, SPRITE_FLAG_PRIO, 0xfffff) 
+					else
+						Renderer.drawCustomSprite(key_label, px, py - (MenuStyle.dataSelect == 0x00 ? 48 : 40), 0x00, SPRITE_FLAG_PRIO, renderQueue + 0x01)
+				}
 			}
 		}
+		/*
+		// Zone Act 2 portraits
+		if (objA0.mapping_offset == 0x00ce0e || objA0.mapping_offset == 0x20bd68)
+		{
+			u32 currentSelectedSlot = 0xffffb128 + (0x4a * (dataselect.slot_selected - 0x01))
+			u32 selectedSlotData = 0xffffe6ac + (0x0a * (dataselect.slot_selected - 0x01))
+			
+			if (A0 == currentSelectedSlot && (dataselect.slot_selected > 0x00 && dataselect.slot_selected < 0x09))
+			{
+				u8 zoneID = SaveZoneAct.getActualZoneID(A0)
+				if ((u8[A0 + 0x75] == 0x02) && (u8[A0 + 0x08] != 0x01))
+				{
+					u64 portait
+					if (zoneID == 0x00)
+						portait = "dataSel_portait_AIZ2"
+					else if (zoneID == 0x01)
+						portait = "dataSel_portait_HSZ2"
+					
+					// Check if the sprite exists
+					if (Renderer.hasCustomSprite(portait))
+					{
+						Renderer.drawCustomSprite(portait, px - 40, py - (MenuStyle.dataSelect == 0x00 ? 128 : 120), 0x00, SPRITE_FLAG_PRIO, renderQueue + 0x01)
+					}
+				} 
+			}
+		}*/
 	}
 	
 	// Return the base function
