@@ -1,34 +1,28 @@
 {
 	// Experiments
 	"dataSel_portait_AIZ2": { "File": "saveSel_portait_AIZ2.png", "Rect": "0,0,80,56", "Center": "0,0" },
+	"dataSel_portait_HSZ2": { "File": "saveSel_portait_HSZ2.png", "Rect": "0,0,80,56", "Center": "0,0" },
 	
 	//-----------
-	// "Act" text
-	"dataSel_saveslot_act": { "File": "dataselect_objects.png", "Rect": "1,10,26,8", "Center": "13,8" },
-	// "Act" text (Needed Sonic 3 Complete Font mod)
-	"dataSel_saveslot_actComplete": { "File": "dataselect_objects.png", "Rect": "1,28,26,8", "Center": "13,8" },
 	
-	// "0 ~ 9" numbers
-	"dataSel_saveslot_number_0": { "File": "dataselect_objects.png", "Rect": "1,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_1": { "File": "dataselect_objects.png", "Rect": "10,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_2": { "File": "dataselect_objects.png", "Rect": "19,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_3": { "File": "dataselect_objects.png", "Rect": "28,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_4": { "File": "dataselect_objects.png", "Rect": "37,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_5": { "File": "dataselect_objects.png", "Rect": "47,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_6": { "File": "dataselect_objects.png", "Rect": "55,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_7": { "File": "dataselect_objects.png", "Rect": "64,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_8": { "File": "dataselect_objects.png", "Rect": "73,1,8,8", "Center": "0,8" },
-	"dataSel_saveslot_number_9": { "File": "dataselect_objects.png", "Rect": "82,1,8,8", "Center": "0,8" },
+	// "Act 0 ~ 3" label
+	"dataSel_saveLabel_ACT_0": { "File": "dataSel_saveLabel_ACT.png", "Rect": "1,1,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_ACT_1": { "File": "dataSel_saveLabel_ACT.png", "Rect": "1,10,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_ACT_2": { "File": "dataSel_saveLabel_ACT.png", "Rect": "1,19,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_ACT_3": { "File": "dataSel_saveLabel_ACT.png", "Rect": "1,28,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_ACT_BOSS": { "File": "dataSel_saveLabel_ACT.png", "Rect": "1,37,48,8", "Center": "24,8" },
 	
-	// "0 ~ 9" numbers (Needed Sonic 3 Complete Font mod)
-	"dataSel_saveslot_numberComplete_0": { "File": "dataselect_objects.png", "Rect": "1,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_1": { "File": "dataselect_objects.png", "Rect": "10,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_2": { "File": "dataselect_objects.png", "Rect": "19,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_3": { "File": "dataselect_objects.png", "Rect": "28,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_4": { "File": "dataselect_objects.png", "Rect": "37,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_5": { "File": "dataselect_objects.png", "Rect": "47,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_6": { "File": "dataselect_objects.png", "Rect": "55,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_7": { "File": "dataselect_objects.png", "Rect": "64,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_8": { "File": "dataselect_objects.png", "Rect": "73,19,8,8", "Center": "0,8" },
-	"dataSel_saveslot_numberComplete_9": { "File": "dataselect_objects.png", "Rect": "82,19,8,8", "Center": "0,8" }
+	// "Act 0 ~ 3" label (Needed Sonic 3 Complete Font mod)
+	"dataSel_saveLabel_Complete_ACT_0": { "File": "dataSel_saveLabel_ACT.png", "Rect": "50,1,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_Complete_ACT_1": { "File": "dataSel_saveLabel_ACT.png", "Rect": "50,10,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_Complete_ACT_2": { "File": "dataSel_saveLabel_ACT.png", "Rect": "50,19,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_Complete_ACT_3": { "File": "dataSel_saveLabel_ACT.png", "Rect": "50,28,48,8", "Center": "24,8" },
+	"dataSel_saveLabel_Complete_ACT_BOSS": { "File": "dataSel_saveLabel_ACT.png", "Rect": "50,28,48,8", "Center": "24,8" },
+	
+	// "Act 0 ~ 3" label (Needed Mania Style Data Select mod)
+	"dataSel_saveLabel_Mania_ACT_0": { "File": "dataSel_saveLabel_Mania_ACT.png", "Rect": "1,1,50,15", "Center": "40,22" },
+	"dataSel_saveLabel_Mania_ACT_1": { "File": "dataSel_saveLabel_Mania_ACT.png", "Rect": "1,17,50,15", "Center": "40,22" },
+	"dataSel_saveLabel_Mania_ACT_2": { "File": "dataSel_saveLabel_Mania_ACT.png", "Rect": "1,33,50,15", "Center": "40,22" },
+	"dataSel_saveLabel_Mania_ACT_3": { "File": "dataSel_saveLabel_Mania_ACT.png", "Rect": "1,49,50,15", "Center": "40,22" },
+	"dataSel_saveLabel_Mania_ACT_BOSS": { "File": "dataSel_saveLabel_Mania_ACT.png", "Rect": "52,1,50,15", "Center": "40,22" }  
 }
